--- a/style.scss
+++ b/style.scss
@@ -6,6 +6,7 @@
 }
 // root
 :root{
+    --color-text: #555555;
     --color-fff: #fff;
     --color-title: #222222;
     --bg-color: #F3FBF8;
@@ -92,5 +93,142 @@
                 }
             }
         }
+    }
+    header{
+        width: 100%;
+        height: auto;
+        display: flex;
+        justify-content: center;
+        background-color: var(--bg-color);
+        .header__container{
+            max-width: 1240px;
+            width: 100%;
+            .header__up{
+                width: 100%;
+                height: auto;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                .header__title{
+                    padding: 90px 0 20px 0 ;
+                    text-align: center;
+                    color: var(--color-title);
+                    font-style: normal;
+                    font-weight: 700;
+                    font-size: 70px;
+                    line-height: 90px;
+                }
+                .header__paragraph{
+                    margin:  0 0 35px 0;
+                    overflow: hidden;
+                    color: var(--color-text);
+                    font-style: normal;
+                    font-weight: 400;
+                    font-size: 18px;
+                    line-height: 30px;
+                    text-align: center;
+                    width: 637px;
+                }
+                .header__order{
+                    display: flex;
+                    align-items: center;
+                    margin: 0 auto;
+                    .header__order-text{
+                        color: var(--color-title);
+                        font-style: normal;
+                        font-weight: 500;
+                        font-size: 18px;
+                        line-height: 30px;
+                        margin: 0 10px 0 0;
+                    }
+                    .header__order-button{
+                        width: 60px;
+                        height: 60px;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        background-color: var(--btn-bg);
+                        border-radius: 50%;
+                        -webkit-border-radius: 50%;
+                        -moz-border-radius: 50%;
+                        -ms-border-radius: 50%;
+                        -o-border-radius: 50%;
+                        i{
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+                            font-size: 22px;
+                            color: var(--bg-color);
+                        }
+                    }
+                }
+            }
+            .header__down{
+                width: 100%;
+                height: auto;
+                display: flex;
+                justify-content: space-between;
+                .header__img{
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    img{
+                        width: 862.18px;
+                        height: 465.52px;
+                    }
+                }
+                .header__info{
+                    height: auto;
+                    display: flex;
+                    flex-direction: column;
+                    .header__card{
+                        list-style: none;
+                        background: var(--color-fff);
+                        width: 250px;
+                        height: 116px;
+                        margin: 20px 0 0 0;
+                        border-radius: 10px;
+                        display: flex;
+                        justify-content: space-evenly;
+                        align-items: center;
+                        .header__left-card{
+                            width: 65px;
+                            height: 65px;
+                            background-color: var(--bg-color);
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+                            color: var(--btn-bg);
+                            font-size: 28px;
+                            border-radius: 50%;
+                            -webkit-border-radius: 50%;
+                            -moz-border-radius: 50%;
+                            -ms-border-radius: 50%;
+                            -o-border-radius: 50%;
+                        }
+                        .header__right-card{
+                            display: flex;
+                            flex-direction: column;
+                            align-items: center;
+                            h3{
+                                font-style: normal;
+                                font-weight: 400;
+                                font-size: 48px;
+                                line-height: 48px;
+                                color: var(--color-title);
+                            }
+                            h6{
+                                font-style: normal;
+                                font-weight: 400;
+                                font-size: 18px;
+                                line-height: 30px;
+                                color: var(--color-title);
+                            }
+                        }
+                    }
+                }
+            }
+        }
+        
     }
 }
