--- a/style.scss
+++ b/style.scss
@@ -6,6 +6,7 @@
 }
 // root
 :root{
+    --body-bg: #FFFFFF;
     --color-text: #555555;
     --color-fff: #fff;
     --color-title: #222222;
@@ -16,6 +17,7 @@
 .body{
     width: 100%;
     height: auto;
+    background-color: var(--body-bg);
     menu{
         width: 100%;
         height: 100px;
@@ -100,6 +102,14 @@
         display: flex;
         justify-content: center;
         background-color: var(--bg-color);
+        position: relative;
+        .header__leaves{
+            width: 612px;
+            height: auto;
+            left: 0;
+            top: -5%;
+            position: absolute;
+        }
         .header__container{
             max-width: 1240px;
             width: 100%;
@@ -183,7 +193,7 @@
                     flex-direction: column;
                     .header__card{
                         list-style: none;
-                        background: var(--color-fff);
+                        background: var(--body-bg);
                         width: 250px;
                         height: 116px;
                         margin: 20px 0 0 0;
@@ -230,5 +240,115 @@
             }
         }
         
+    }
+    .about{
+        width: 100%;
+        height: auto;
+        display: flex;
+        align-items: flex-start;
+        justify-content: center;
+        .about__container{
+            max-width: 1240px;
+            width: 95%;
+            height: auto;
+            .about_-title{
+                margin: 100px 0 20px 0;
+                font-style: normal;
+                font-weight: 700;
+                font-size: 70px;
+                line-height: 90px;
+                color: var(--color-title);
+            }
+            .about__paragraph{
+                width: 637.01px;
+                height: 90px;
+                font-style: normal;
+                font-weight: 400;
+                font-size: 18px;
+                line-height: 30px;
+                color: var(--color-text);
+            }
+            .about__content{
+                width: 100%;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                .about__left{
+                    width: auto;
+                    height: auto;
+                    list-style: none;
+                    .about__cards{
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: center;
+                        .about__card{
+                            cursor: pointer;
+                            width: 500px;
+                            height: 160px;
+                            display: flex;
+                            align-items: center;
+                            justify-content: space-evenly;
+                            border-radius: 10px;
+                            -webkit-border-radius: 10px;
+                            -moz-border-radius: 10px;
+                            -ms-border-radius: 10px;
+                            -o-border-radius: 10px;
+                            .about__icon{
+                                width: 80px;
+                                height: 80px;
+                                background-color: var(--bg-color);
+                                display: flex;
+                                justify-content: center;
+                                align-items: center;
+                                border-radius: 50%;
+                                i{
+                                    color: var(--btn-bg);
+                                    font-size: 25px;
+                                }
+                            }
+                            .about__card-info{
+                                display: flex;
+                                flex-direction: column;
+                                justify-content: space-around;
+                                width: 277.45px;
+                                height: 78px;
+                                h4{
+                                    font-style: normal;
+                                    font-weight: 700;
+                                    font-size: 20px;
+                                    line-height: 30px;
+                                    color: var(--color-title);
+                                }
+                                h5{
+                                    font-style: normal;
+                                    font-weight: 400;
+                                    font-size: 14px;
+                                    line-height: 20px;
+                                    color: var(--color-text);
+                                }
+                            }
+                        }
+                        .about__card:hover{
+                            transition: all 400ms ease;
+                            background-color: var(--bg-color);
+                            .about__icon{
+                                background-color: var(--color-fff);
+                            }
+                        }
+                    }
+                }
+                .about__right{
+                    width: auto;
+                    height: auto;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    img{
+                        width: 600px;
+                        height: 600px;
+                    }
+                }
+            }
+        }
     }
 }
