--- a/style.css
+++ b/style.css
@@ -616,3 +616,153 @@ html {
   right: 0;
   bottom: 0;
 }
+.body .menu {
+  margin: 100px 0 0 0;
+  width: 100%;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+.body .menu .s-menu-container {
+  max-width: 1240px;
+  width: 100%;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.body .menu .s-menu-container .s-menu__left {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  list-style: none;
+}
+.body .menu .s-menu-container .s-menu__left .s-menu__title {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 70px;
+  line-height: 90px;
+  color: var(--color-title);
+}
+.body .menu .s-menu-container .s-menu__left .s-menu__subtitle {
+  margin: 30px 0 0 0;
+  width: 586.26px;
+  height: 180px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 30px;
+  color: var(--color-text);
+}
+.body .menu .s-menu-container .s-menu__left .s-menu__foot {
+  width: auto;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: 70px 0 0 0;
+}
+.body .menu .s-menu-container .s-menu__left .s-menu__foot .s-menu__left-foot {
+  list-style: none;
+}
+.body .menu .s-menu-container .s-menu__left .s-menu__foot .s-menu__left-foot .s-menu__name {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 30px;
+  line-height: 36px;
+  color: var(--color-title);
+}
+.body .menu .s-menu-container .s-menu__left .s-menu__foot .s-menu__left-foot .s-menu__stars {
+  margin: 10px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.body .menu .s-menu-container .s-menu__left .s-menu__foot .s-menu__left-foot .s-menu__stars .s-menu__star {
+  list-style: none;
+  color: rgb(225, 225, 0);
+  margin: 0 10px 0 0;
+}
+.body .menu .s-menu-container .s-menu__left .s-menu__foot .s-menu__right-foot {
+  margin-right: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.body .menu .s-menu-container .s-menu__left .s-menu__foot .s-menu__right-foot .s-menu-btn {
+  cursor: pointer;
+  width: 56px;
+  height: 56px;
+  list-style: none;
+  background-color: transparent;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 0 10px;
+  border-radius: 50%;
+}
+.body .menu .s-menu-container .s-menu__left .s-menu__foot .s-menu__right-foot .s-menu-btn i {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  color: var(--btn-bg);
+  font-size: 25px;
+}
+.body .menu .s-menu-container .s-menu__left .s-menu__foot .s-menu__right-foot .s-menu-btn:active {
+  background-color: var(--btn-bg);
+}
+.body .menu .s-menu-container .s-menu__left .s-menu__foot .s-menu__right-foot .s-menu-btn:active i {
+  color: var(--color-fff);
+}
+.body .menu .s-menu-container .s-menu__right {
+  list-style: none;
+  width: 800px;
+  height: 500px;
+  background-color: var(--bg-color);
+  border-radius: 50%;
+  overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+.body .menu .s-menu-container .s-menu__right img {
+  width: auto;
+  height: 444.82px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
