--- a/style.scss
+++ b/style.scss
@@ -448,4 +448,112 @@ html{
             bottom: 0;
         }
     }
+    .menu{
+        margin: 100px 0 0 0;
+        width: 100%;
+        height: auto;
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+        .s-menu-container{
+            max-width: 1240px;
+            width: 100%;
+            height: auto;
+            display: flex;
+            align-items: center;
+            .s-menu__left{
+                display: flex;
+                flex-direction: column;
+                list-style: none;
+                .s-menu__title{
+                    font-style: normal;
+                    font-weight: 700;
+                    font-size: 70px;
+                    line-height: 90px;
+                    color: var(--color-title);
+                }
+                .s-menu__subtitle{
+                    margin: 30px 0 0 0;
+                    width: 586.26px;
+                    height: 180px;
+                    font-style: normal;
+                    font-weight: 400;
+                    font-size: 18px;
+                    line-height: 30px;
+                    color: var(--color-text);
+                }
+                .s-menu__foot{
+                    width: auto;
+                    height: auto;
+                    display: flex;
+                    justify-content: space-between;
+                    margin: 70px 0 0 0;
+                    .s-menu__left-foot{
+                        list-style: none;
+                        .s-menu__name{
+                            font-style: normal;
+                            font-weight: 500;
+                            font-size: 30px;
+                            line-height: 36px;
+                            color: var(--color-title);
+                        }
+                        .s-menu__stars{
+                            margin: 10px 0;
+                            display: flex;
+                            .s-menu__star{
+                                list-style: none;
+                                color: rgb(225, 225, 0);
+                                margin: 0 10px 0 0;
+                            }
+                        }
+                    }
+                    .s-menu__right-foot{
+                        margin-right: 50px;
+                        display: flex;
+                        .s-menu-btn{
+                            cursor: pointer;
+                            width: 56px;
+                            height: 56px;
+                            list-style: none;
+                            background-color: transparent;
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+                            margin: 0 10px;
+                            border-radius: 50%;
+                            i{
+                                display: flex;
+                                align-items: center;
+                                justify-content: center;
+                                color: var(--btn-bg);
+                                font-size: 25px;
+                            }
+                        }
+                        .s-menu-btn:active{
+                            background-color: var(--btn-bg);
+                            i{
+                                color: var(--color-fff);
+                            }
+                        }
+                    }
+                }
+            }
+            .s-menu__right{
+                list-style: none;
+                width: 800px;
+                height: 500px;
+                background-color: var(--bg-color);
+                border-radius: 50%;
+                overflow: hidden;
+                display: flex;
+                justify-content: center;
+                align-items: flex-end;
+                img{
+                    width: auto;
+                    height: 444.82px;
+                    object-fit: cover;
+                }
+            }
+        }
+    }
 }
