--- a/style.css
+++ b/style.css
@@ -834,3 +834,86 @@ html {
   line-height: 30px;
   margin: 30px 0 0;
 }
+.body footer {
+  width: 100%;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+.body footer .footer__container {
+  width: 100%;
+  max-width: 1240px;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  margin: 100px 0 50px;
+}
+.body footer .footer__container .footer__info {
+  list-style: none;
+}
+.body footer .footer__container .footer__info .foot__logo {
+  width: 70px;
+  height: 70px;
+}
+.body footer .footer__container .footer__info .foot__logo img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.body footer .footer__container .footer__info .footer__subtitle {
+  color: var(--color-text);
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 30px;
+  width: 345.36px;
+  height: 150px;
+}
+.body footer .footer__container .navigation, .body footer .footer__container .resources, .body footer .footer__container .foot-contact {
+  width: auto;
+  height: auto;
+}
+.body footer .footer__container .navigation .nav__title, .body footer .footer__container .resources .nav__title, .body footer .footer__container .foot-contact .nav__title {
+  list-style: none;
+  color: var(--color-title);
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 31px;
+  margin: 0 0 20px;
+}
+.body footer .footer__container .navigation li, .body footer .footer__container .resources li, .body footer .footer__container .foot-contact li {
+  margin: 20px 0;
+  list-style: none;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 23px;
+  color: var(--color-text);
+}
+.body footer .footer__container .foot-contact .social-nets {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.body footer .footer__container .foot-contact .social-nets li {
+  list-style: none;
+  margin-right: 40px;
+  font-size: 30px;
+  color: var(--color-title);
+}
